hello-python/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-python
spec:
  selector:
    matchLabels:
      app: hello-python
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-python
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - name: hello-python
        image: billyto/hello-python
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      #imagePullSecrets:
      #  - name: regcred
