hello-python/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-python
  # annotations:
  #   metallb.universe.tf/address-pool: metallb-pool
  labels:
    app: hello-python
spec:
  selector:
    app: hello-python
  ports:
    -  targetPort: 5000
       port: 5001
